sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/AssetMaintenance__c.object-meta.xml
<CustomObject>
    <description>Asset maintenance and service object</description>
    <label>Asset Maintenance</label>
    <nameField>
        <displayFormat>SRV-{0000}</displayFormat>
        <label>Asset Maintenance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Maintenance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>