sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Asignee__c.field-meta.xml
<CustomField>
    <fullName>Asignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asignee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Department_Unit__c</field>
            <operation>equals</operation>
            <value>Information Systems</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset Maintenance (Asignee)</relationshipLabel>
    <relationshipName>Asset_Maintenance1</relationshipName>
    <type>Lookup</type>
</CustomField>