sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Sanergy Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sanergy_Asset__c.Asset_Name__c</field>
            <operation>equals</operation>
            <valueField>Sanergy_Asset__c.Asset_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Asset Maintenance</relationshipLabel>
    <relationshipName>AssetMaintenanceRecords</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>