sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Cost_of_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Repairs__c</fullName>
    <label>Total Cost of Repairs</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>