sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Date_Expected__c.field-meta.xml
<CustomField>
    <fullName>Date_Expected__c</fullName>
    <description>When the asset is expected back</description>
    <label>Date Expected</label>
    <type>Date</type>
</CustomField>