sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Date_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>