sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <description>What was the problem with the asset</description>
    <label>Diagnosis</label>
    <type>TextArea</type>
</CustomField>