sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff who maintained the asset</description>
    <inlineHelpText>Staff who maintained the asset</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset Maintenance (Employee)</relationshipLabel>
    <relationshipName>Asset_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>