sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Received_by__c.field-meta.xml
<CustomField>
    <fullName>Received_by__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Received by</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Asset Maintenance History</relationshipLabel>
    <relationshipName>AssetMaintenanceRecords</relationshipName>
    <type>Lookup</type>
</CustomField>