sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Received_On__c.field-meta.xml
<CustomField>
    <fullName>Received_On__c</fullName>
    <label>Received On</label>
    <type>DateTime</type>
</CustomField>