sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Service_Reason__c.field-meta.xml
<CustomField>
    <fullName>Service_Reason__c</fullName>
    <inlineHelpText>Why is the service needed</inlineHelpText>
    <label>Maintenance description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>