sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>What led to the problem?</description>
    <inlineHelpText>What led to the problem?</inlineHelpText>
    <label>Root Cause</label>
    <type>TextArea</type>
</CustomField>