sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Not Fixed</fullName>
            </value>
            <value>
                <fullName>Unfixable</fullName>
            </value>
            <value>
                <fullName>Under Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>