sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Time_Spent_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Hours__c</fullName>
    <description>Time spent in hours to complete maintenance by internal staff</description>
    <inlineHelpText>Enter the Hours spent</inlineHelpText>
    <label>Time Spent(Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>