sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Total_Cost_of_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Repairs__c</fullName>
    <description>Unit cost multiplied by quantity</description>
    <formula>Quantity__c  *  Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit cost multiplied by quantity</inlineHelpText>
    <label>Total Cost of Repairs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>