sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Type_of_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Maintenance__c</fullName>
    <description>Internal maintenance done by staff external maintenance done by third party vendor</description>
    <inlineHelpText>Internal maintenance done by staff external maintenance done by third party vendor</inlineHelpText>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Maintenance</fullName>
            </value>
            <value>
                <fullName>External Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>