sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <label>Unit Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>