sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist as a Sanergy Vendor.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sanergy Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Maintenance History</relationshipLabel>
    <relationshipName>Asset_Maintenance_History</relationshipName>
    <type>Lookup</type>
</CustomField>