sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/recordTypes/Asset_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Asset_Maintenance</fullName>
    <active>true</active>
    <label>Asset Maintenance</label>
</RecordType>