sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/recordTypes/Vehicle_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Maintenance</fullName>
    <active>true</active>
    <description>Specific to vehicles only</description>
    <label>Vehicle Maintenance</label>
</RecordType>