sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/validationRules/Time_spent.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_spent</fullName>
    <active>true</active>
    <description>Time Spent is required if maintenance is internal and employee name is selected</description>
    <errorConditionFormula>AND(ISPICKVAL( Type_of_Maintenance__c , &quot;Internal Maintenance&quot;),
OR ( 
ISBLANK ( Employee__c ), 
ISBLANK( Time_Spent_Hours__c )))</errorConditionFormula>
    <errorMessage>Please fill the Employee field and the Time Spent Field</errorMessage>
</ValidationRule>