sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/validationRules/Vendor_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Name</fullName>
    <active>true</active>
    <description>Pick a vendor it is aa external maintenance</description>
    <errorConditionFormula>AND(TEXT(Type_of_Maintenance__c) = &quot;External Maintenance&quot;,
ISBLANK( Vendor__c ))</errorConditionFormula>
    <errorDisplayField>Vendor__c</errorDisplayField>
    <errorMessage>Please fill the Vendor field</errorMessage>
</ValidationRule>