sfSandBoxCode/force-app/main/default/objects/AssetMaintenance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Asset__c</columns>
    <columns>Time_Spent_Hours__c</columns>
    <columns>Type_of_Maintenance__c</columns>
    <columns>Employee__c</columns>
    <columns>Vendor__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Taken__c</columns>
    <columns>Date_Expected__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>